# picilisp

./: .gitignore  Cargo.toml  README.md  proba.lisp  proba.txt
src/: config.rs  debugger.lisp  errors.rs  index.html  main.rs  prelude.lisp  proba.lisp  repl.lisp
src/config/: mod.rs
src/core/: mod.rs  tests.rs
src/debug/: mod.rs
src/error_utils/: mod.rs  output.txt
src/gui/: mod.rs  tests.rs
src/io/: mod.rs  tests.rs
src/memory/: mod.rs  tests.rs
src/metadata/: mod.rs
src/native/: mod.rs
src/native/debug/: mod.rs
src/native/eval/: mod.rs  tests.rs
src/native/function/: mod.rs  tests.rs
src/native/functions/: mod.rs  tests.rs
src/native/globals/: mod.rs
src/native/io/: mod.rs
src/native/list/: mod.rs  tests.rs
src/native/misc/: mod.rs  tests.rs
src/native/numbers/: mod.rs  tests.rs
src/native/print/: mod.rs  tests.rs
src/native/read/: mod.rs  mod2.rs  tests.rs
src/native/reflection/: mod.rs
src/native/repl/: mod.rs
src/native/signal/: mod.rs
src/parser/: mod.rs
src/primitives/: mod.rs
src/ui/: mod.rs  terminal.rs
src/ui/gui/: mod.rs  tests.rs
src/util/: mod.rs  tests.rs
tests/: tests.rs
