[package]
name = "picilisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tiny_http = "0.12.0"
